# WRO-Rasp-EM-Code

./: README.md
WRO-Rasp-EM-Code/: README.md  requirements.txt
WRO-Rasp-EM-Code/main/: run.sh
WRO-Rasp-EM-Code/main/code/: CMakeLists.txt  main.cpp  stream.py  wro
WRO-Rasp-EM-Code/main/code/components/: stream.py
WRO-Rasp-EM-Code/main/code/components/socket/: socket_client.cpp  socket_client.h
WRO-Rasp-EM-Code/main/code/components/socket_client/: CMakeLists.txt  socket_client.cpp  socket_client.h
WRO-Rasp-EM-Code/main/code/components/socket_server/: CMakeLists.txt  socket_server.cpp  socket_server.h
WRO-Rasp-EM-Code/main/code/templates/: index.html
